<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/latitude_view"
        android:id="@id/lat"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_view"
        android:id="@id/lon"
        android:layout_toEndOf="@id/lat"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_view"
        android:textSize="18sp"
        android:id="@id/city"
        android:layout_below="@id/lat"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_view"
        android:id="@id/temperature"
        android:layout_below="@id/city"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_view"
        android:id="@id/pressure"
        android:layout_below="@id/temperature"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_view"
        android:id="@id/humidity"
        android:layout_below="@id/pressure"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_view"
        android:id="@id/speed"
        android:layout_below="@id/humidity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_direction_view"
        android:id="@id/direction"
        android:layout_below="@id/speed"/>
</RelativeLayout>